# paranoid

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DISTRIBUTION.md  Dockerfile  Input-template.md  MANIFEST.in  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  STATUS.md  TESTING.md  VULNCON-IMPLEMENTATION-PLAN.md  build-test.bat  build-test.sh  docker-compose.yml  paranoid.spec  pyproject.toml  test_pipeline.py
.github/: TESTING_CHEATSHEET.md  pull_request_template.md
.github/workflows/: ci.yml  docker.yml  example-threat-model.yml  pr-validation.yml  release.yml  test.yml
action/: Dockerfile  action.yml  entrypoint.sh
backend/: __init__.py  config.py  dedup.py  main.py  serialization.py
backend/auth/: __init__.py  dependencies.py  passwords.py  tokens.py
backend/db/: connection.py  crud.py  crud_auth.py  crud_projects.py  gap_utils.py  persist.py  schema.py  seed.py  vectors.py
backend/export/: markdown.py  pdf.py  sarif.py
backend/image/: __init__.py  encoder.py  errors.py  mermaid.py  validation.py
backend/mcp/: __init__.py  client.py  errors.py
backend/models/: __init__.py  api.py  enums.py  extended.py  state.py
backend/pipeline/: __init__.py  input_parser.py  nodes.py  pre_flight.py  runner.py
backend/pipeline/nodes/: __init__.py  enrichment.py  extraction.py  helpers.py  summary.py  threats.py
backend/pipeline/prompts/: __init__.py  attack_tree.py  code_summary.py  maestro.py  stride.py  test_case.py
backend/providers/: __init__.py  anthropic.py  base.py  healthcheck.py  ollama.py  openai.py
backend/routes/: _helpers.py  analyze.py  auth.py  config.py  export.py  models.py  projects.py  sources.py  threats.py
backend/rules/: engine.py
backend/security/: __init__.py  csrf.py  headers.py  rate_limit.py  source_key.py
backend/sources/: __init__.py  manager.py  paths.py
cli/: context.py  errors.py  main.py
cli/commands/: config.py  models.py  run.py  version.py
cli/input/: __init__.py  diagram_loader.py  file_loader.py
cli/output/: __init__.py  console.py  json_writer.py
examples/: README.md  demo_structured_input.py  maestro-example-loan-agent.md  maestro-example-rag-chatbot.md  maestro-loan-agent-architecture.mmd  maestro-rag-chatbot-architecture.mmd  stride-api-gateway-architecture.mmd  stride-example-api-gateway.md  stride-example-frappe-lending.md  stride-example-juice-shop.md  stride-example-ondc-quick-commerce.md  stride-example-razorpay-integration.md  stride-example-upi-payments.md  stride-ondc-quick-commerce-architecture.mmd  stride-upi-payments-architecture.mmd  test_structured_input.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/components/: DreadBadge.svelte  DreadBadge.test.js  ExportMenu.svelte  ExportMenu.test.js  McpConfig.svelte  ModelCard.svelte  PipelineProgress.svelte  PipelineProgress.test.js  PreFlightPanel.svelte  PreFlightPanel.test.js  ResourceList.svelte  ResourceList.test.js  ThreatCard.svelte  ThreatCard.test.js  Wizard.svelte  Wizard.test.js
frontend/src/lib/: api.js  mermaid_sanitize.js  mermaid_sanitize.test.js  stores.js  stores.test.js  utils.js
frontend/src/routes/: AdminUsers.svelte  AttackTree.svelte  CodeSources.svelte  Home.svelte  Library.svelte  Login.svelte  Members.svelte  NewModel.svelte  Register.svelte  Results.svelte  Review.svelte  ReviewContext.svelte  Settings.svelte  TestCases.svelte
scripts/: README.md  build_binary.sh  build_package.sh  build_test.py  import_prowler.py  install-hooks.bat  install-hooks.sh  run_tests.py
scripts/git-hooks/: pre-commit  pre-push
seeds/: ai_llm_patterns.json  atlas_patterns.json  attack_cloud_patterns.json  auth_provider_patterns.json  aws_prowler_patterns.json  azure_prowler_patterns.json  capec_patterns.json  cloud_service_patterns.json  framework_patterns.json  gcp_prowler_patterns.json  infrastructure_patterns.json  maestro_patterns.json  message_broker_patterns.json  orm_patterns.json  owasp_llm_top10.json  stride_patterns.json
tests/: conftest.py  mock_provider.py  test_auth.py  test_cli_run_code.py  test_cli_run_diagram.py  test_code_sources_crud.py  test_csrf.py  test_db_config_kv.py  test_db_connection.py  test_db_crud.py  test_db_crud_components.py  test_db_persist.py  test_dedup.py  test_export_markdown.py  test_export_pdf.py  test_export_sarif.py  test_gap_utils.py  test_image_encoder.py  test_input_parser.py  test_mcp_client.py  test_models.py  test_models_delete_prune.py  test_models_export.py  test_pipeline_e2e.py  test_pipeline_gaps.py  test_pipeline_nodes.py  test_pipeline_runner.py  test_pre_flight.py  test_providers.py  test_providers_healthcheck.py  test_providers_vision.py  test_rate_limit.py  test_routes_analyze.py  test_routes_auth.py  test_routes_config.py  test_routes_export.py  test_routes_models.py  test_routes_projects.py  test_routes_run_code_source.py  test_routes_sources.py  (+8 more)
tests/fixtures/: __init__.py  export.py  pipeline.py
