[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paranoid-cli"
version = "1.3.0"
description = "Open-source iterative threat modeling powered by LLMs - STRIDE + MAESTRO frameworks with DREAD scoring"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Astitva"}
]
maintainers = [
    {name = "Astitva"}
]
keywords = [
    "threat-modeling",
    "security",
    "stride",
    "maestro",
    "llm",
    "ai",
    "security-analysis",
    "dread",
    "risk-assessment",
    "cybersecurity",
    "appsec",
    "devsecops",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.42.0",
    "openai>=1.58.1",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.10.0",
    "aiosqlite>=0.20.0",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4.2",
    "reportlab>=4.2.5",
    "python-multipart>=0.0.19",
    "mcp>=1.3.1",
    "Pillow>=10.0.0",
    "aiofiles>=24.1.0",
    "click>=8.1.7",
]

[project.urls]
Homepage = "https://github.com/theAstiv/paranoid"
Repository = "https://github.com/theAstiv/paranoid"
Documentation = "https://github.com/theAstiv/paranoid#readme"
Changelog = "https://github.com/theAstiv/paranoid/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/theAstiv/paranoid/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.4",
    "httpx>=0.28.0",
]
build = [
    "build>=1.2.0",
    "twine>=6.0.0",
    "pyinstaller>=6.11.0",
]

[project.scripts]
paranoid = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "cli*", "seeds*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "S",   # flake8-bandit (security)
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN001", # Missing type annotation for function arguments
    "ANN201", # Missing return type annotation
    "ANN202", # Missing return type annotation for private function
    "ANN204", # Missing return type annotation for special method
    "ANN401", # Dynamically typed expressions (Any)
    "S101",   # Use of assert (needed for tests)
    "S104",   # Binding to all interfaces (intentional for Docker)
    "S608",   # SQL injection (false positives on parameterized queries)
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value comparisons
    "PLC0415", # Import outside top-level (intentional lazy loading)
    "PLW0603", # Global statement (needed for embedding model singleton)
    "E501",   # Line too long (handled by formatter)
    "EM102",  # f-string in exception
    "EM101",  # raw string in exception
    "B904",   # raise without from
    "ASYNC240", # pathlib in async (minor issue)
    "UP042",  # replace str enum
    "RET504", # unnecessary assign
    "SIM102", # collapsible if
    "ANN002", # missing *args type
    "ANN003", # missing **kwargs type
    "DTZ005", # datetime without timezone
    "PTH123", # builtin open (fine for simple cases)
    "RUF022", # __all__ not sorted (grouped by category is more readable)
    "SIM117", # nested with statements (acceptable for test setup)
    "RUF001", # ambiguous unicode characters (en-dash in prompts is intentional)
    "SIM108", # ternary operator (if-else is more readable in some cases)
    "ASYNC230", # async with open (acceptable for simple file writes)
    "S110",   # try-except-pass (acceptable for config loading)
    "SIM105", # contextlib.suppress (try-except-pass is more explicit)
    "DTZ006", # datetime.fromtimestamp without tz (acceptable for JSON serialization)
    "S324",   # insecure hash (md5 in tests is fine, not for security)
    "A001",   # variable shadows builtin (format variable in tests is fine)
    "F841",   # unused variable (acceptable in tests checking side effects)
    "PTH101", # os.chmod vs Path.chmod (os.chmod is fine for compatibility)
    "E402",   # module import not at top (acceptable after logger setup)
    "RUF012", # mutable class attribute (COLORS dict is intentionally shared)
]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
